apps/decypharr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: decypharr
  name: decypharr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: decypharr
  template:
    metadata:
      labels:
        app: decypharr
      namespace: media
    spec:
      containers:
        - image: cy01/blackhole:latest
          imagePullPolicy: IfNotPresent
          name: decypharr_app
          ports:
            - containerPort: 8282
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt
              name: mediamount
              mountPropagation: Bidirectional
          securityContext:
            privileged: true
          resources:
            requests:
              nextflow.io/fuse: "1"
            limits:
              nextflow.io/fuse: "1"
      volumes:
        - name: mediamount
          persistentVolumeClaim:
            claimName: media-pvc
      terminationGracePeriodSeconds: 0
