apps/decypharr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: decypharr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`decypharr.alixroden.co.uk`)
      kind: Rule
      services:
        - name: decypharr
          port: 8282
      middlewares:
        - name: forward-auth
          namespace: traefik-forward-auth
  ingressClassName: traefik
  tls:
    secretName: alixroden-co-uk-tls
